# RDBC

./: config.h.in  configure.ac
include/RDBC/: Makefile.am
odbc/: LinkDef.h  Makefile.am
rdbc/: LinkDef.h  Makefile.am
